# weak_symbol_example

./: .gitignore  CMakeLists.txt  README.md  SUMMARY.md  build.sh
include/: base_types.h  shared_class.h
lib/: shared_library.cpp  shared_library.h
src/: host_implementation.cpp  main.cpp
